# markdown-edit

./: Dockerfile  README.md  compose.yaml  todo.txt
backend/: .env.example  Cargo.toml  Dockerfile  main.go
backend/.sqlx/: query-0211b3025070d724402698ba2edfde077199dc21a6e0837c59806570d621f858.json  query-1304ea1ff008d290ab40f2574a285dc0e24e1bfc596a30ceb6cd366acc3eeff0.json  query-20105b11fde895184792ecdbf6741aebef1a0557ff2efe2f70eab0c7d5cd9a25.json  query-40c97cdb0c1cb7aff0bd95fa6e0d012b40051d200ff86409d64a578777affd08.json  query-4389ccae0f4230f9ca62aaba6c188598c4e4951530e76d1fed39f3d95e5f8536.json  query-474b6550de2e4d547a2d23707323968650cb20ba2abd419936de3fda106c1630.json  query-5dbdda7cdfb7141c6cb9e9a62fec2f147beb853f0e5b0bba255911d925808598.json  query-6b75ed626ce93165ec1a969766b2d9c404f50f0e03593fe56ce2dc6d1e72af41.json  query-6db770653bc1807295bb53f3813d517c8ccb6696c6a28c40d7cf3d1a2aea2215.json  query-7c88122b6b421dde3efbd86b803d27e338a9d60b92fa4740c4a4c34990432f15.json  query-9fa0757cff89fbc1aa959d14295e90a4f4bda575715a155b17e14e2da406a800.json  query-ae1554e1b7eab63e98d5d2e70c4e6aaa6641cc9da0ce1612bf904875ae5761cd.json  query-af8cfc2b340ff47a66a8cde0ce16b0d338d64d6931c793edb7256163b413497d.json  query-d9cc54a0adf578b15e8ee2e20fbad94b79b7ef536f3533a1ac55eb9e7759789b.json  query-e89680401a0a9ec9a5f5f14ab1ec286773ed2a82977326593f5f981d2f642bbb.json  query-e9cf2a47bd67e9f99a062bf47d14d94c7f1af8668bd706c1cb0dbd85d70b7db8.json
backend/migrations/: 0001_initial.sql
backend/src/: main.rs
backend/src/db/: connection.rs  document_queries.rs  mod.rs  queries.rs  (+1 more)
(+40 files in other folders)
