[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.0", features = ["cookie", "typed-header"] }
anyhow = "1.0.75"
cookie = "0.18.0"
headers = "0.3"
reqwest = { version = "0.11.22", features = ["json"] }
oauth2 = "4.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["tls-native-tls", "runtime-tokio", "uuid", "postgres", "migrate", "time"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
http = "1.0.0"
